fix: adjust add to cart button styles for better visibility and alignment

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -139,6 +139,12 @@
         visibility: hidden;
         bottom: -10px;
         transition: all 0.3s ease;
+            right: 40px;
+    color: black;
+    background: whitesmoke;
+    border: solid 1px;
+    font-weight: 600;
+    padding: 5px 10px;
     }
 
     // Swiper navigation buttons styling
